--- a/frontend/src/app/alert/alert.component.html
+++ b/frontend/src/app/alert/alert.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="show" class="alert alert-success alert-dismissible fade show" role="alert">
-  Your job finished successfully, it took : {{executionTime}}
+  Your job finished successfully, it took : {{executionTime}} seconds
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
