parametrize nb of lines to read

--- a/frontend/src/app/alert-failure/alert-failure.component.html
+++ b/frontend/src/app/alert-failure/alert-failure.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="show" class="alert alert-danger alert-dismissible fade show" role="alert">
   Your job failed
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+  <button (click)="close()" type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
