--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,6 +5,13 @@
     <div class="container" style="padding: 100px ; background-color: bisque">
       <form (ngSubmit)="submitForm()" >
         <div class="form-group">
+          <label for="formJobName">Job Name</label>
+
+          <input type="text" class="form-control" id="formJobName" placeholder="importUserJob"
+                 name="jobName" [(ngModel)]="jobName" required
+          >
+        </div>
+        <div class="form-group">
           <label for="formChunkSize">Chunk size</label>
 
           <input type="text" class="form-control" id="formChunkSize" placeholder="10"
@@ -12,10 +19,17 @@
           >
         </div>
         <div class="form-group">
-          <label for="formStepSize">Step size</label>
+          <label for="formStepSize">Number of steps</label>
 
-          <input type="text" class="form-control" id="formStepSize" placeholder="10"
+          <input type="text" class="form-control" id="formStepSize" placeholder="2"
                  name="stepSize" [(ngModel)]="stepSize" required
+          >
+        </div>
+        <div class="form-group">
+          <label for="formStepSize">Number of lines</label>
+
+          <input type="text" class="form-control" id="formLinesToRead" placeholder="1000"
+                 name="nbLinesToRead" [(ngModel)]="nbLinesToRead" required
           >
         </div>
         <div class="col text-center" style="padding: 25px">
